--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compress": "uglify"
+    "split": "split -b 23k marquees/min.js minified"
   },
   "repository": {
     "type": "git",
