--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "split": "split -b 20k marquees/min.js minified"
+    "split": "split -b 20k marquees/min.js minified",
+    "bld": "node generateFeatureFields.js && node generateCalcFeatures.js && node preMinify.js"
   },
   "repository": {
     "type": "git",
