--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "split": "split -b 20k dev/min.js minified",
-    "bld": "node generateFeatureFields.js && node generateCalcFeatures.js && node preMinify.js"
+    "bld": "node generateFeatureFields.js && node generateCalcFeatures.js && node preMinify.js",
+    "webgif": "webgif -u https://dopaminemachines.website/preview -d 10 -o ./gifTest.gif -f 60"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/scyclow/worldwideweb#readme",
   "dependencies": {
     "uglify": "^0.1.5"
+  },
+  "devDependencies": {
+    "webgif": "^1.1.0"
   }
 }
